--- a/gb/19/5/11/n11249164.md
+++ b/gb/19/5/11/n11249164.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dwfgyx2217/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共航母密档“瓦良格号”不能细说的事</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/05/8142e5030f83b00ff0ae4f37c8d566fc-600x400-1.jpg" />
 <h6>4月23日下午，中共海军在青岛举行海上阅兵。令中共尴尬的是，整个阅兵活动在浓雾中结束。（AFP）
 </h6>
 <hr>
-<p>【大纪元2019年05月11日讯】（大纪元记者古清儿报导）今年4月，中共参与<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E9%9D%92%E5%B2%9B.md">青岛</a>阅兵的“<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E8%BE%BD%E5%AE%81%E8%88%B0.md">辽宁舰</a>”又被各大官媒大肆吹捧一番。其实，从性能上说，海内外专家均不看好这艘航母。究其历史，更不光彩。直到现在，连这艘船的所有权究竟是谁都还没厘清。</p>
-<h2>海内外专家不看好“<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E8%BE%BD%E5%AE%81%E8%88%B0.md">辽宁舰</a>”航母</h2>
+<p>【大纪元2019年05月11日讯】（大纪元记者古清儿报导）今年4月，中共参与<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%9D%92%E5%B2%9B.md#1">青岛</a>阅兵的“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%BE%BD%E5%AE%81%E8%88%B0.md#1">辽宁舰</a>”又被各大官媒大肆吹捧一番。其实，从性能上说，海内外专家均不看好这艘航母。究其历史，更不光彩。直到现在，连这艘船的所有权究竟是谁都还没厘清。</p>
+<h2>海内外专家不看好“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%BE%BD%E5%AE%81%E8%88%B0.md#1">辽宁舰</a>”航母</h2>
 <p>澳门军事专家黄东在评论这次阅兵时说，“辽宁号”航母去年阅兵后入厂复出，雷达、动力、着舰及生活设施改一改，又高调炫耀一番几乎视作新型。其实中国航母专家早已算过，这种舰先天不足、后天难救，甲板调度相当困难；加上缺乏弹射器；歼15战机缺陷难以痊愈，失事率高踞全国同代机之冠，即使有四艘也敌不过一艘尼米兹……</p>
 <p>日本《产经新闻》报导曾将“辽宁舰”与美国卡尔·文森号航母进行对比，指辽宁舰具有三大致命缺陷。第一大缺陷是速度严重滞后；第二大缺陷是钢材性能存隐患；第三大缺陷是气象应对能力有限。</p>
-<p>“辽宁舰”的前身叫做“<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E7%93%A6%E8%89%AF%E6%A0%BC%E5%8F%B7.md">瓦良格号</a>”。2012年，中共将其命名为“辽宁舰”。</p>
-<p>“<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E7%93%A6%E8%89%AF%E6%A0%BC%E5%8F%B7.md">瓦良格号</a>”是1985年前苏联乌克兰黑海马卡洛夫造船厂为苏联海军建造的第三代航母，最开始的名字为“里加号”，后改名“瓦良格号”。1992年，当航母建造完成了68%的时候，苏联解体；“瓦良格号”也因为失去了资金来源而停工。</p>
+<p>“辽宁舰”的前身叫做“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%93%A6%E8%89%AF%E6%A0%BC%E5%8F%B7.md#1">瓦良格号</a>”。2012年，中共将其命名为“辽宁舰”。</p>
+<p>“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%93%A6%E8%89%AF%E6%A0%BC%E5%8F%B7.md#1">瓦良格号</a>”是1985年前苏联乌克兰黑海马卡洛夫造船厂为苏联海军建造的第三代航母，最开始的名字为“里加号”，后改名“瓦良格号”。1992年，当航母建造完成了68%的时候，苏联解体；“瓦良格号”也因为失去了资金来源而停工。</p>
 <p>1995年，瓦良格号被作为俄罗斯偿还乌克兰债务的替代品交付给乌克兰，乌克兰政府则将航母交给黑海造船厂自行处置。黑海造船厂开始与多方接洽，要将其脱手。</p>
 <h2>港商以2000万美元价格从乌克兰买到了“瓦良格号”</h2>
-<p>香港《南华早报》在2015年披露广州军区退役军人、香港商人徐增平购买“瓦良格”号航母的背后故事，称他以2000万美元买下“瓦良格”号，后转让给<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%B5%B7%E5%86%9B.md">中共海军</a>，经改装和建造成为中共首艘航母“辽宁舰”。</p>
+<p>香港《南华早报》在2015年披露广州军区退役军人、香港商人徐增平购买“瓦良格”号航母的背后故事，称他以2000万美元买下“瓦良格”号，后转让给<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%B5%B7%E5%86%9B.md#1">中共海军</a>，经改装和建造成为中共首艘航母“辽宁舰”。</p>
 <p>该报导称，徐增平曾是前广州军区篮球队队长，于1983年退役，5年后移居香港，是香港富豪。</p>
 <p>报道说，为了买航母，他从1996年6月开始做准备工作。他在乌克兰首都基辅设立一家公司，聘请船舶工程师等相关人员共12人长驻在当地做调研。从1998年1月到1999年，他4次到当地参与洽谈﹑交涉和谈判。</p>
 <p>当获悉乌克兰政府规定航母售卖后不能用于军事用途之后，他告诉乌方要将航母改装成世界最大的海上赌场酒店。</p>
@@ -23,7 +23,7 @@
 <p>2015年，大陆官媒曾对以上内容有所报导。但是，购买“瓦良格”号过程中的还有部分内容是中共忽略不说的。</p>
 <h2>中共不披露的购买“瓦良格号”内情：太子党密谋</h2>
 <p>《南华早报》的报导称，大约20年前，中共军方高层有人策划了一项独一无二的机密行动，当时的国家一级领导人对这项任务竟然一无所知。</p>
-<p>报导引述徐增平的话表示，经过多次商议后，他终被时任<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%B5%B7%E5%86%9B.md">中共海军</a>副司令员贺鹏飞中将说服，决定接受一个难度非常高的任务。这个任务是从乌克兰购入一艘未完工的苏制航母，并将之运送回国。</p>
+<p>报导引述徐增平的话表示，经过多次商议后，他终被时任<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%B5%B7%E5%86%9B.md#1">中共海军</a>副司令员贺鹏飞中将说服，决定接受一个难度非常高的任务。这个任务是从乌克兰购入一艘未完工的苏制航母，并将之运送回国。</p>
 <p>徐增平接受采访时透露，贺鹏飞当时对他说，对中共海军而言，可以购买一艘现成的新航母，这可是千载难逢的历史机遇。此前已有两名香港商人拒绝了要求，使徐增平成为唯一的人选。</p>
 <p>当时，中共并不愿意触怒美国，中央要求军方搁置建设或购置航母的计划。</p>
 <p>因此，整个行动必须秘密进行，由徐增平担任贺鹏飞的代理人，假装买船是为了在澳门建设海上赌场。</p>
@@ -58,40 +58,42 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/19/5/11/n11249164.htm">中共航母密档“瓦良格号”不能细说的事</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/19/3/6/n11092642.htm">仅两成国际生考上大学 英语为主因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/2/27/n11077059.htm">非欧盟学生留学法国 本科和硕士注册费大涨</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/2/23/n11065493.htm">留美新生人数下滑 中国学生依然最多</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/28/n11007024.htm">留学生英语水平引忧 维州州长干预</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/16/n10979334.htm">为延长在澳逗留时间 近20万留学生转换签证</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/9/n10962420.htm">研究：6成留学生通过中介在加拿大上学</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/12/30/n10941031.htm">忧千人计划？麻省理工传拒收中国高中生</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/11/26/n10875639.htm">多伦多麦克肯立高中 - 通往主流社会精英之路</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884463.htm">北京多家医院爆发新冠肺炎群聚感染</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879930.htm">专家：中共已是烂摊子 全球将迎来新的中国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884649.htm">中共多家监狱爆发大规模新冠肺炎疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884866.htm">武汉民间志愿者：新冠肺炎重症死亡率达50%</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881829.htm">【拍案惊奇】新病毒无特效药 病患求生要闯2关</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883542.htm">【热点互动】围绕零号病人 官方为何讳莫如深</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846854.htm">【我来说西游】黑风山怪窃袈裟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/5/9/n11246110.md#1">中共海军实力如何？专家：仍赶不上美国</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/5/9/n11243633.md#1">中共海军不敢说的海难事故</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/5/7/n11238722.md#1">中共海军高层的腐败生活内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/5/3/n11231601.md#1">中共军内海军地位变迁与内斗</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dwfgyx2217/djy/blob/master/gb/19/5/11/n11249164.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/23/n10165368.md#1" target="_blank">赵刚：穿制服的思想</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/26/n9322928.md#1" target="_blank">一位法轮功学员家属想要说的话</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/5/11/n11249164.htm">中共航母密档“瓦良格号”不能细说的事</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/5/11/n11249164.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
